--- a/popup.html
+++ b/popup.html
@@ -111,7 +111,7 @@
   <div class="header">
     <span class="header-title">UnCopy - Clean URLs</span>
     <div class="toggle-wrapper">
-      <span>Auto</span>
+      <span>Enable</span>
       <label class="toggle">
         <input type="checkbox" id="toggleEnabled" checked>
         <span class="slider"></span>
@@ -128,7 +128,6 @@
 
   <div id="status"></div>
 
-  <script src="cleaner.js"></script>
-  <script src="popup.js"></script>
+  <script type="module" src="popup.js"></script>
 </body>
 </html>
